@@ -8,6 +8,9 @@ Changes - Apache::Test change logfile
 
 =item 1.09-dev
 
+change -DAPACHE1 (and like defines) to -D APACHE1 to fix Win32
+compatibility issues [Steve Hay]
+
 fix the custom config use for Apache-Test's own upgrades [Stas]
 
 =item 1.08 - February 24, 2004
